--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         }
     }
     sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
+        main.java.srcDirs += 'src/main/kotlin' + 'src/test/resources'
     }
 }
 
@@ -34,6 +34,8 @@ dependencies {
 
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.8.9'
+
 }
 repositories {
     mavenCentral()
